--- a/weasis-launcher/conf/config.properties
+++ b/weasis-launcher/conf/config.properties
@@ -137,7 +137,8 @@ felix.auto.start.70= \
 
 felix.auto.start.75= \
  file:${maven.localRepository}/org/weasis/dicom/weasis-dicom-au/${app.version}/weasis-dicom-au-${app.version}.jar \
-
+ file:${maven.localRepository}/org/weasis/dicom/weasis-dicom-wave/${app.version}/weasis-dicom-wave-${app.version}.jar \
+ 
 felix.auto.start.100= \
  file:${maven.localRepository}/org/weasis/base/weasis-base-viewer2d/${app.version}/weasis-base-viewer2d-${app.version}.jar \
 
