--- a/weasis-acquire/weasis-acquire-editor/pom.xml
+++ b/weasis-acquire/weasis-acquire-editor/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>docking-frames</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.weasis.opencv</groupId>
+			<artifactId>weasis-opencv-core</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.weasis.core</groupId>
 			<artifactId>weasis-core-api</artifactId>
 			<version>${project.version}</version>
