--- a/weasis-base/weasis-base-viewer2d/pom.xml
+++ b/weasis-base/weasis-base-viewer2d/pom.xml
@@ -11,11 +11,11 @@
 	<artifactId>weasis-base-viewer2d</artifactId>
 	<packaging>bundle</packaging>
 	<name>Image Viewer [${project.artifactId}]</name>
-	
+
 	<properties>
 		<bundle.namespace>org.weasis.base.viewer2d</bundle.namespace>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -33,4 +33,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.weasis.opencv</groupId>
+			<artifactId>weasis-opencv-core</artifactId>
+			<version>${project.parent.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
