--- a/weasis-opencv/weasis-opencv-core/pom.xml
+++ b/weasis-opencv/weasis-opencv-core/pom.xml
@@ -18,6 +18,14 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-scr-plugin</artifactId>
 			</plugin>
@@ -26,7 +34,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
 					<instructions>
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*</Export-Package>
+						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*,org.weasis.*</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
