--- a/weasis-dicom/weasis-dicom-qr/pom.xml
+++ b/weasis-dicom/weasis-dicom-qr/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>weasis-dicom-parent</artifactId>
 		<groupId>org.weasis.dicom</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0-RC1</version>
 		<relativePath>../weasis-dicom-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>weasis-dicom-qr</artifactId>
