--- a/weasis-opencv/weasis-opencv-core-windows-x86/pom.xml
+++ b/weasis-opencv/weasis-opencv-core-windows-x86/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>weasis-opencv-parent</artifactId>
 		<groupId>org.weasis.opencv</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0-RC1</version>
 		<relativePath>../weasis-opencv-parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
