--- a/weasis-imageio/weasis-imageio-codec/pom.xml
+++ b/weasis-imageio/weasis-imageio-codec/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>weasis-imageio-parent</artifactId>
 		<groupId>org.weasis.imageio</groupId>
-		<version>3.0.0-RC1</version>
+		<version>3.0.1-SNAPSHOT</version>
 		<relativePath>../weasis-imageio-parent/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
