--- a/weasis-parent/pom.xml
+++ b/weasis-parent/pom.xml
@@ -67,6 +67,14 @@
 			<id>mvn-repo-master</id>
 			<url>https://raw.github.com/nroduit/mvn-repo/master/</url>
 		</repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>repo.spring.io</id>
+			<name>Spring Lib Release Repository</name>
+			<url>http://repo.spring.io/libs-release</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -399,6 +407,30 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.ably</groupId>
+			<artifactId>Java-WebSocket</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.msgpack</groupId>
+			<artifactId>msgpack-core</artifactId>
+			<version>0.8.16</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.ably</groupId>
+			<artifactId>ably-java</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
