--- a/weasis-parent/pom.xml
+++ b/weasis-parent/pom.xml
@@ -460,6 +460,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
