--- a/weasis-base/weasis-base-ui/pom.xml
+++ b/weasis-base/weasis-base-ui/pom.xml
@@ -36,6 +36,12 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>org.weasis.base</groupId>
+			<artifactId>weasis-base-viewer2d</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.weasis.dicom</groupId>
 			<artifactId>weasis-dicom-explorer</artifactId>
 			<version>${project.version}</version>
