Fixed views change

--- a/weasis-base/weasis-base-ui/pom.xml
+++ b/weasis-base/weasis-base-ui/pom.xml
@@ -43,6 +43,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.weasis.dicom</groupId>
+			<artifactId>weasis-dicom-viewer2d</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.weasis.dicom</groupId>
 			<artifactId>weasis-dicom-explorer</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
