Fixed series init from prefs bug

--- a/weasis-base/weasis-base-viewer2d/pom.xml
+++ b/weasis-base/weasis-base-viewer2d/pom.xml
@@ -33,4 +33,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.weasis.dicom</groupId>
+			<artifactId>weasis-dicom-codec</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
